--- a/8.html
+++ b/8.html
@@ -112,6 +112,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 30px;
+    gap:22px;
 }
 
 /* Кнопка со стрелкой по центру */
