--- a/index.html
+++ b/index.html
@@ -197,10 +197,10 @@
     <div class="meal">
         <h3 class="meal-title">Завтрак</h3>
         <table class="meal-items">
-            <tr><td>🥣 Овсянка: 60 г сухой</td><td>0,3 BYN</td></tr>
-            <tr><td>🥛 Молоко: 200 мл</td><td>0,5 BYN</td></tr>
-            <tr><td>🍌 Банан: 100 г</td><td>0,5 BYN</td></tr>
-            <tr><td>🥜 Арахис: 10 г</td><td>0,2 BYN</td></tr>
+            <tr><td><span class="emoji">🥣</span> Овсянка: 60 г сухой</td><td>0,3 BYN</td></tr>
+            <tr><td><span class="emoji">🥛</span> Молоко: 200 мл</td><td>0,5 BYN</td></tr>
+            <tr><td><span class="emoji">🍌</span> Банан: 100 г</td><td>0,5 BYN</td></tr>
+            <tr><td><span class="emoji">🥜</span> Арахис: 10 г</td><td>0,2 BYN</td></tr>
         </table>
         <div class="meal-total">
             Итого: 400 ккал | Б:17г | Ж:14г | У:55г
@@ -210,9 +210,9 @@
     <div class="meal">
         <h3 class="meal-title">Перекус</h3>
         <table class="meal-items">
-            <tr><td>🧀 Творог: 100 г</td><td>1,1 BYN</td></tr>
-            <tr><td>🍞 Тост: 30 г</td><td>0,1 BYN</td></tr>
-            <tr><td>🍯 Мёд: 5 г</td><td>0,1 BYN</td></tr>
+            <tr><td><span class="emoji">🧀</span> Творог: 100 г</td><td>1,1 BYN</td></tr>
+            <tr><td><span class="emoji">🍞</span> Тост: 30 г</td><td>0,1 BYN</td></tr>
+            <tr><td><span class="emoji">🍯</span> Мёд: 5 г</td><td>0,1 BYN</td></tr>
         </table>
         <div class="meal-total">
             Итого: 250 ккал | Б:17г | Ж:7г | У:20г
@@ -222,21 +222,21 @@
     <div class="meal">
         <h3 class="meal-title">Обед</h3>
         <table class="meal-items">
-            <tr><td>🍚 Рис: 60 г сухой</td><td>0,25 BYN</td></tr>
-            <tr><td>🍗 Курица: 80 г</td><td>1,0 BYN</td></tr>
-            <tr><td>🥬 Капуста тушёная: 150 г</td><td>0,25 BYN</td></tr>
-            <tr><td>🫒 Масло: 5 г</td><td>0,1 BYN</td></tr>
+            <tr><td><span class="emoji">🍚</span> Рис: 60 г сухой</td><td>0,25 BYN</td></tr>
+            <tr><td><span class="emoji">🍗</span> Курица: 80 г</td><td>1,0 BYN</td></tr>
+            <tr><td><span class="emoji">🥗</span> Салат (капуста, сметана, огурцы, помидоры): 150 г</td><td>0,3 BYN</td></tr>
+            <tr><td><span class="emoji">🫒</span> Масло: 5 г</td><td>0,1 BYN</td></tr>
         </table>
         <div class="meal-total">
-            Итого: 400 ккал | Б:30г | Ж:12г | У:35г
+            Итого: 380 ккал | Б:28г | Ж:12г | У:33г
         </div>
     </div>
 
     <div class="meal">
         <h3 class="meal-title">Перекус</h3>
         <table class="meal-items">
-            <tr><td>🥚 Яйцо: 1 шт</td><td>0,4 BYN</td></tr>
-            <tr><td>🍏 Яблоко: 100 г</td><td>0,2 BYN</td></tr>
+            <tr><td><span class="emoji">🥚</span> Яйцо: 1 шт</td><td>0,4 BYN</td></tr>
+            <tr><td><span class="emoji">🍏</span> Яблоко: 100 г</td><td>0,2 BYN</td></tr>
         </table>
         <div class="meal-total">
             Итого: 150 ккал | Б:7г | Ж:6г | У:13г
@@ -246,30 +246,32 @@
     <div class="meal">
         <h3 class="meal-title">Ужин</h3>
         <table class="meal-items">
-            <tr><td>🍝 Макароны: 70 г сухих</td><td>0,25 BYN</td></tr>
-            <tr><td>🥓 Ветчина: 60 г</td><td>1,15 BYN</td></tr>
-            <tr><td>🧀 Сыр "Экспонента": 20 г</td><td>0,4 BYN</td></tr>
+            <tr><td><span class="emoji">🍝</span> Макароны: 80 г сухих</td><td>0,3 BYN</td></tr>
+            <tr><td><span class="emoji">🥓</span> Ветчина: 60 г</td><td>1,15 BYN</td></tr>
+            <tr><td><span class="emoji">🧀</span> Сыр "Экспонента": 20 г</td><td>0,4 BYN</td></tr>
         </table>
         <div class="meal-total">
-            Итого: 380 ккал | Б:26г | Ж:16г | У:32г
+            Итого: 420 ккал | Б:28г | Ж:16г | У:37г
         </div>
     </div>
 
     <div class="meal">
-        <h3 class="meal-title">На ночь</h3>
+        <h3 class="meal-title">Вечерний перекус</h3>
         <table class="meal-items">
-            <tr><td>🧀 Творог: 100 г</td><td>1,1 BYN</td></tr>
-            <tr><td>🥛 Молоко: 150 мл</td><td>0,4 BYN</td></tr>
+            <tr><td><span class="emoji">🥜</span> Орехи: 20 г</td><td>0,4 BYN</td></tr>
+            <tr><td><span class="emoji">🍎</span> Яблоко: 100 г</td><td>0,2 BYN</td></tr>
         </table>
         <div class="meal-total">
-            Итого: 180 ккал | Б:15г | Ж:6г | У:8г
+            Итого: 180 ккал | Б:5г | Ж:14г | У:15г
         </div>
     </div>
 
     <div class="day-total">
-        <strong>Итого за день:</strong> Б:112г | Ж:61г | У:163г | Калории: 1760 ккал | Стоимость: ~7.4 BYN
+        <strong>Итого за день:</strong> Б:102г | Ж:69г | У:173г | Калории: 1780 ккал | Стоимость: ~4,9 BYN
     </div>
 </div>
+
+
 
     
 
