--- a/index.html
+++ b/index.html
@@ -199,11 +199,10 @@
         <table class="meal-items">
             <tr><td><span class="emoji">🥣</span> Овсянка: 60 г сухой</td><td>0,3 BYN</td></tr>
             <tr><td><span class="emoji">🥛</span> Молоко: 200 мл</td><td>0,5 BYN</td></tr>
-            <tr><td><span class="emoji">🍌</span> Банан: 100 г</td><td>0,5 BYN</td></tr>
-            <tr><td><span class="emoji">🥜</span> Арахис: 10 г</td><td>0,2 BYN</td></tr>
+            <tr><td><span class="emoji">🥜</span> Арахис: 15 г</td><td>0,3 BYN</td></tr>
         </table>
         <div class="meal-total">
-            Итого: 400 ккал | Б:17г | Ж:14г | У:55г
+            Итого: 380 ккал | Б:18г | Ж:14г | У:45г
         </div>
     </div>
 
@@ -211,11 +210,10 @@
         <h3 class="meal-title">Перекус</h3>
         <table class="meal-items">
             <tr><td><span class="emoji">🧀</span> Творог: 100 г</td><td>1,1 BYN</td></tr>
-            <tr><td><span class="emoji">🍞</span> Тост: 30 г</td><td>0,1 BYN</td></tr>
-            <tr><td><span class="emoji">🍯</span> Мёд: 5 г</td><td>0,1 BYN</td></tr>
+            <tr><td><span class="emoji">🍌</span> Банан: 100 г</td><td>0,5 BYN</td></tr>
         </table>
         <div class="meal-total">
-            Итого: 250 ккал | Б:17г | Ж:7г | У:20г
+            Итого: 200 ккал | Б:19г | Ж:7г | У:26г
         </div>
     </div>
 
@@ -224,52 +222,51 @@
         <table class="meal-items">
             <tr><td><span class="emoji">🍚</span> Рис: 60 г сухой</td><td>0,25 BYN</td></tr>
             <tr><td><span class="emoji">🍗</span> Курица: 80 г</td><td>1,0 BYN</td></tr>
-            <tr><td><span class="emoji">🥗</span> Салат (капуста, сметана, огурцы, помидоры): 150 г</td><td>0,3 BYN</td></tr>
-            <tr><td><span class="emoji">🫒</span> Масло: 5 г</td><td>0,1 BYN</td></tr>
+            <tr><td><span class="emoji">🥗</span> Салат (капуста, огурец, помидор, сметана 10 г)</td><td>0,3 BYN</td></tr>
+            <tr><td><span class="emoji">🫒</span> Масло оливковое: 5 г</td><td>0,1 BYN</td></tr>
         </table>
         <div class="meal-total">
-            Итого: 380 ккал | Б:28г | Ж:12г | У:33г
+            Итого: 420 ккал | Б:30г | Ж:12г | У:35г
         </div>
     </div>
 
     <div class="meal">
         <h3 class="meal-title">Перекус</h3>
         <table class="meal-items">
-            <tr><td><span class="emoji">🥚</span> Яйцо: 1 шт</td><td>0,4 BYN</td></tr>
             <tr><td><span class="emoji">🍏</span> Яблоко: 100 г</td><td>0,2 BYN</td></tr>
         </table>
         <div class="meal-total">
-            Итого: 150 ккал | Б:7г | Ж:6г | У:13г
+            Итого: 50 ккал | Б:0г | Ж:0г | У:14г
         </div>
     </div>
 
     <div class="meal">
         <h3 class="meal-title">Ужин</h3>
         <table class="meal-items">
-            <tr><td><span class="emoji">🍝</span> Макароны: 80 г сухих</td><td>0,3 BYN</td></tr>
+            <tr><td><span class="emoji">🍝</span> Макароны: 70 г сухих</td><td>0,25 BYN</td></tr>
             <tr><td><span class="emoji">🥓</span> Ветчина: 60 г</td><td>1,15 BYN</td></tr>
-            <tr><td><span class="emoji">🧀</span> Сыр "Экспонента": 20 г</td><td>0,4 BYN</td></tr>
+            <tr><td><span class="emoji">🧀</span> Сыр "Экспонента": 25 г</td><td>0,5 BYN</td></tr>
         </table>
         <div class="meal-total">
-            Итого: 420 ккал | Б:28г | Ж:16г | У:37г
+            Итого: 400 ккал | Б:27г | Ж:16г | У:32г
         </div>
     </div>
 
     <div class="meal">
-        <h3 class="meal-title">Вечерний перекус</h3>
+        <h3 class="meal-title">На ночь</h3>
         <table class="meal-items">
-            <tr><td><span class="emoji">🥜</span> Орехи: 20 г</td><td>0,4 BYN</td></tr>
-            <tr><td><span class="emoji">🍎</span> Яблоко: 100 г</td><td>0,2 BYN</td></tr>
+            <tr><td><span class="emoji">🥛</span> Кефир: 200 мл</td><td>0,4 BYN</td></tr>
         </table>
         <div class="meal-total">
-            Итого: 180 ккал | Б:5г | Ж:14г | У:15г
+            Итого: 100 ккал | Б:7г | Ж:3г | У:7г
         </div>
     </div>
 
     <div class="day-total">
-        <strong>Итого за день:</strong> Б:102г | Ж:69г | У:173г | Калории: 1780 ккал | Стоимость: ~4,9 BYN
+        <strong>Итого за день:</strong> Б:101г | Ж:52г | У:159г | Калории: 1750 ккал | Стоимость: ~4,6 BYN
     </div>
 </div>
+
 
 
 
